--- a/Loginform.html
+++ b/Loginform.html
@@ -9,7 +9,7 @@
 <body>
   <div class="A"> <!-- outer -->
     <div class="B"> <!-- login Form Container -->
-      <h2 class="C">Suprajith Sign up Page</h2> <!-- Title -->
+      <h2 class="C">Sign up Page</h2> <!-- Title -->
       <p class="D">Sign up to continue</p> <!-- Subtitle -->
 
       <form>
